changed graph to rel mapping to new approach without serialization